--- a/drivers/vfio/Makefile
+++ b/drivers/vfio/Makefile
@@ -5,7 +5,8 @@ obj-$(CONFIG_VFIO) += vfio.o
 
 vfio-y += vfio_main.o \
 	  iova_bitmap.o \
-	  container.o
+	  container.o \
+	  group.o
 
 obj-$(CONFIG_VFIO_VIRQFD) += vfio_virqfd.o
 obj-$(CONFIG_VFIO_IOMMU_TYPE1) += vfio_iommu_type1.o
